k8s.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: postgres
          image: postgres
          args:
            - tail
            - -f
            - /dev/null
          imagePullPolicy: IfNotPresent
        - name: busybox
          image: busybox
          args:
            - tail
            - -f
            - /dev/null
          imagePullPolicy: IfNotPresent
        - name: user
          image: us.gcr.io/taeho-io-220708/user:${CIRCLE_SHA1}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
        - name: gce-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.13
          imagePullPolicy: IfNotPresent
          command: ["/cloud_sql_proxy",
                    "-instances=taeho-io-220708:us-west1:taeho-io=tcp:5432",
                    "--credential_file=/secrets/cloudsql/credentials.json"]
          securityContext:
            runAsUser: 2  # non-root user
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
          livenessProbe:
            exec:
              command: ["nc", "-z", "127.0.0.1", "5432"]
            initialDelaySeconds: 5
            timeoutSeconds: 3

      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials

---

apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
spec:
  ports:
    - port: 80
      name: grpc
  selector:
    app: user

---

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: googleapis.com
spec:
  hosts:
    - www.googleapis.com
    - api.googleapis.com
    - oauth2.googleapis.com
    - accounts.googleapis.com
  ports:
    - number: 443
      name: https
      protocol: HTTPS
    - number: 80
      name: http
      protocol: HTTP
  location: MESH_EXTERNAL

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: googleapis.com
spec:
  hosts:
    - www.googleapis.com
    - api.googleapis.com
    - oauth2.googleapis.com
    - accounts.googleapis.com
  tls:
    - match:
        - port: 443
          sniHosts:
            - www.googleapis.com
      route:
        - destination:
            host: www.googleapis.com
    - match:
        - port: 443
          sniHosts:
            - api.googleapis.com
      route:
        - destination:
            host: api.googleapis.com
    - match:
        - port: 443
          sniHosts:
            - oauth2.googleapis.com
      route:
        - destination:
            host: oauth2.googleapis.com
    - match:
        - port: 443
          sniHosts:
            - accounts.googleapis.com
      route:
        - destination:
            host: accounts.googleapis.com

---

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cloudsql-postgres-instance
spec:
  hosts:
    - postgres.taeho.io
  addresses:
    - 35.247.74.142/32
  ports:
    - name: tcp
      number: 3307 # at the moment, Google Cloud SQL always available on port 3307
      protocol: tcp # enable TCP traffic
    - name: postgres
      number: 5432
      protocol: tcp
  location: MESH_EXTERNAL

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
spec:
  hosts:
    - user.taeho.io
  gateways:
    - public-gateway
  http:
    - route:
        - destination:
            host: user
            port:
              number: 80
